# netbox-plugin-azure

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  snyk-code-scan.yml
netbox_azure/: __init__.py  choices.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_azure/api/: __init__.py  serializers.py  urls.py  views.py
netbox_azure/migrations/: 0001_initial.py  0002_alter_azuresubscriptionmodel_comment_and_more.py
netbox_azure/templates/netbox_azure/: azuresubscriptionmodel.html  azuretenantmodel.html
